--- a/jenny-web/src/static/html/systemManage/sysRoleManage.html
+++ b/jenny-web/src/static/html/systemManage/sysRoleManage.html
@@ -20,7 +20,7 @@
 								<form class="form-inline">
 									<div class="form-group">
 										<label for="userName">角色名称：</label>
-										<input type="text" class="form-control" id="roleName" placeholder="用户名称">
+										<input type="text" class="form-control" name="roleName" placeholder="用户名称">
 									</div>
 									<button type="button" class="btn btn-default query">查询</button>
 								</form>
