图标管理功能优化

--- a/jenny-web/src/static/html/systemManage/developManage/sysIconManage.html
+++ b/jenny-web/src/static/html/systemManage/developManage/sysIconManage.html
@@ -83,7 +83,7 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" maxlength="20" name="iconCode" id="iconCode" onchange="javascript:$('#iconShow').removeAttr('class').addClass('fa '+this.value)">
+									<input type="text" class="form-control" maxlength="20" name="iconCode" id="iconCode" onchange="javascript:$('#iconShow').removeAttr('class').addClass(this.value)">
 								</div>
 							</div>
 							<div class="col-sm-3">
