表格字段和表格操作按扭排序功能

--- a/jenny-web/src/static/html/systemManage/developManage/sysMenuManage.html
+++ b/jenny-web/src/static/html/systemManage/developManage/sysMenuManage.html
@@ -412,6 +412,20 @@
 							</div>
 						</div>
 						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">排序</label>
+							<div class="col-sm-7">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-sort-numeric-down"></i>
+									</span>
+									<input type="number" class="form-control" name="showSort" id="showSort">
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
 							<label for="focusedinput" class="col-sm-2 control-label">图标</label>
 							<div class="col-sm-7">
 								<div class="input-group">
@@ -473,6 +487,37 @@
 								</div>
 							</div>
 							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">显示排序按扭</label>
+							<div class="col-sm-7">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-list"></i>
+									</span>
+									<select class="form-control" name="sortable" id="sortable">
+										<option value="1">是</option>
+										<option value="0">否</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">排序</label>
+							<div class="col-sm-7">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-sort-numeric-down"></i>
+									</span>
+									<input type="number" class="form-control" name="showSort" id="showSort">
+								</div>
+							</div>
+							<div class="col-sm-3">
 								<p class="help-block"></p>
 							</div>
 						</div>
