--- a/jenny-web/src/static/html/systemManage/sysRoleManage.html
+++ b/jenny-web/src/static/html/systemManage/sysRoleManage.html
@@ -21,6 +21,7 @@
 										<label for="userName">角色名称：</label>
 										<input type="text" class="form-control" name="roleName" placeholder="用户名称">
 									</div>
+									<button type="reset" class="btn btn-default">重置</button>
 									<button type="button" class="btn btn-default query">查询</button>
 								</form>
 							</div>
