--- a/jenny-web/src/static/html/systemManage/sysUserManage.html
+++ b/jenny-web/src/static/html/systemManage/sysUserManage.html
@@ -5,7 +5,6 @@
 		<meta charset="UTF-8">
 		<title>系统用户管理</title>
 		<link href="../../public/css/style.css" rel='stylesheet' type='text/css' />
-		<!--<link href="../../assets/fonts/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet">-->
 		<link href="../../assets/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
 
@@ -28,6 +27,7 @@
 										<label for="mobile">手机号：</label>
 										<input type="email" class="form-control" name="mobile" placeholder="手机号">
 									</div>
+									<button type="reset" class="btn btn-default">重置</button>
 									<button type="button" class="btn btn-default query">查询</button>
 								</form>
 							</div>
