用户信息和用户设置页面

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -165,16 +165,16 @@
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle username" data-toggle="dropdown">
-						<span class="hidden-xs" id="header_userName">admin</span>
-						<img class="img-circle" id="header_portrait" src="../assets/demo/avatar/avatar_06.png" alt="Dangerfield" />
+						<span class="hidden-xs" id="header_userName"></span>
+						<img class="img-circle" id="header_portrait" src="" alt="Dangerfield" />
 
 					</a>
 					<ul class="dropdown-menu userinfo">
 						<li>
-							<a href="#"><span class="pull-left">我的资料</span> <i class="pull-right fa fa-pencil-alt"></i></a>
+							<a href="#" src="profile.html" menuId="-2"><span class="pull-left">我的资料</span> <i class="pull-right fa fa-pencil-alt"></i></a>
 						</li>
 						<li>
-							<a href="#"><span class="pull-left">设置</span> <i class="pull-right fa fa-cogs"></i></a>
+							<a href="#" src="settings.html" menuId="-3"><span class="pull-left">设置</span> <i class="pull-right fa fa-cogs"></i></a>
 						</li>
 						<li class="divider"></li>
 						<li>
@@ -197,11 +197,11 @@
 								<div class="widget-body welcome-box tabular">
 									<div class="tabular-row">
 										<div class="tabular-cell welcome-avatar">
-											<a href="#"><img id="menu_portrait" src="../assets/demo/avatar/avatar_06.png" class="avatar"></a>
+											<a href="#"><img id="menu_portrait" src="" class="avatar"></a>
 										</div>
 										<div class="tabular-cell welcome-options">
 											<span class="welcome-text">欢迎,</span>
-											<a href="#" class="name" id="menu_userName">admin</a>
+											<a href="#" class="name" id="menu_userName"></a>
 										</div>
 									</div>
 								</div>
