--- a/jenny-web/src/static/html/systemManage/sysUserManage.html
+++ b/jenny-web/src/static/html/systemManage/sysUserManage.html
@@ -46,10 +46,10 @@
 		<script src="../../public/jquery/js/jquery-1.11.1.min.js"></script>
 		<script src="../../public/jquery/js/jquery.validate.min.js"></script>
 		<script src="../../public/jquery/js/jquery.validate.messages_cn.js"></script>
-		<script src="../../public/tableexport/js/tableexport-2.1.js"></script>
+		<script src="../../public/tableexport/js/tableExport2.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table.js"></script>
-		<!--<script src="../../public/bootstrap/js/bootstrap-table-toolbar.js"></script>-->
+		<script src="../../public/bootstrap/js/bootstrap-table-toolbar.js"></script>
 		<!--<script src="../../public/bootstrap/js/bootstrap-editable.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table-editable.js"></script>-->
 		<script src="../../public/bootstrap/js/bootstrap-table-export.js"></script>
