分页查询优化

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -66,7 +66,7 @@
 				</li>
 
 				<li class="toolbar-icon-bg demo-headerdrop-hidden">
-					<a href="#" id="headerbardropdown"><span class="icon-bg"><i class="fa fa-fw fa-level-down-alt"></i></span></i>
+					<a href="#" id="headerbardropdown"><span class="icon-bg"><i class="fas fa-fw fa-level-down-alt"></i></span></i>
 					</a>
 				</li>
 
@@ -171,14 +171,14 @@
 					</a>
 					<ul class="dropdown-menu userinfo">
 						<li>
-							<a href="#" src="profile.html" menuId="-2"><span class="pull-left">我的资料</span> <i class="pull-right fa fa-pencil-alt"></i></a>
+							<a href="#" src="profile.html" menuId="-2"><span class="pull-left">我的资料</span> <i class="pull-right fas fa-pencil-alt"></i></a>
 						</li>
 						<li>
 							<a href="#" src="settings.html" menuId="-3"><span class="pull-left">设置</span> <i class="pull-right fa fa-cogs"></i></a>
 						</li>
 						<li class="divider"></li>
 						<li>
-							<a href="#" onclick="logout();"><span class="pull-left">退出</span> <i class="pull-right fa fa-sign-out-alt"></i></a>
+							<a href="#" onclick="logout();"><span class="pull-left">退出</span> <i class="pull-right fas fa-sign-out-alt"></i></a>
 						</li>
 					</ul>
 				</li>
