服务管理功能

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -193,8 +193,8 @@
 					<div class="static-sidebar">
 						<div class="sidebar">
 
-							<div class="widget stay-on-collapse">
-								<div class="widget-body welcome-box tabular">
+							<!--<div class="widget stay-on-collapse">
+								<div class="widget-body welcome-box tabular" src="profile.html" menuId="-2">
 									<div class="tabular-row">
 										<div class="tabular-cell welcome-avatar">
 											<a href="#"><img id="menu_portrait" src="" class="avatar"></a>
@@ -205,10 +205,10 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>-->
 
 							<div class="widget stay-on-collapse" id="widget-sidebar">
-								<span class="widget-heading"></span>
+								<!--<span class="widget-heading"></span>-->
 								<nav role="navigation" class="widget-body">
 									<ul class="acc-menu" id="side-menu">
 										<li>
