--- a/jenny-web/src/static/html/systemManage/sysRoleManage.html
+++ b/jenny-web/src/static/html/systemManage/sysRoleManage.html
@@ -42,6 +42,8 @@
 		<script src="../../public/jquery/js/jquery.validate.messages_cn.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table.js"></script>
+		<script src="../../public/bootstrap/js/bootstrap-table-toolbar.js"></script>
+		<script src="../../public/bootstrap/js/bootstrap-table-export.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table-zh-CN.js"></script>
 		<script src="../../public/ztree/js/jquery.ztree.core.js"></script>
 		<script src="../../public/ztree/js/jquery.ztree.excheck.js"></script>
