访问日志功能

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -212,7 +212,7 @@
 								<nav role="navigation" class="widget-body">
 									<ul class="acc-menu" id="side-menu">
 										<li>
-											<a href="#" src="main.html" menuId="-1"><i class="fa fa-home"></i><span>首页</span><span class="badge badge-dark">1</span></a>
+											<a href="#" src="main.html" menuId="-1"><i class="fas fa-home"></i><span>首页</span><span class="badge badge-dark">1</span></a>
 										</li>
 									</ul>
 								</nav>
