访问日志请求信息

--- a/jenny-web/src/static/html/surveillanceCenter/visitLog.html
+++ b/jenny-web/src/static/html/surveillanceCenter/visitLog.html
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="input-group well w100">
-						<select class="form-control" id="documentationName">
+						<select class="form-control gallery" id="documentationName">
 						</select>
 					</div>
 					<div class="inbox-menu">
@@ -38,9 +38,11 @@
 									<div class="panel panel-default" data-widget-editbutton="false" id="p1">
 										<div class="panel-body">
 											<div id="documentation">
+												
 											</div>
 										</div>
 									</div>
+									
 								</div>
 							</div>
 						</div>
