--- a/jenny-web/src/static/html/surveillanceCenter/visitLog.html
+++ b/jenny-web/src/static/html/surveillanceCenter/visitLog.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>系统菜单管理</title>
+		<title>访问日志</title>
 		<link href="../../public/css/style.css" rel='stylesheet' type='text/css' />
 		<link href="../../assets/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
