--- a/jenny-web/src/static/html/systemManage/developManage/sysServerManage.html
+++ b/jenny-web/src/static/html/systemManage/developManage/sysServerManage.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>系统菜单管理</title>
+		<title>系统服务管理</title>
 		<link href="../../../public/css/style.css" rel='stylesheet' type='text/css' />
 		<link href="../../../assets/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
