服务监控功能

--- a/jenny-web/src/static/html/surveillanceCenter/serverManage/serverStatus.html
+++ b/jenny-web/src/static/html/surveillanceCenter/serverManage/serverStatus.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>访问日志</title>
-		<link href="../../public/css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../../assets/css/styles.css" type="text/css" rel="stylesheet">
+		<link href="../../../public/css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../../../assets/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -38,18 +38,18 @@
 				</div>
 			</div>
 		</div>
-		<script src="../../public/jquery/js/jquery-1.11.1.min.js"></script>
-		<script src="../../public/jquery/js/jquery-ui.js"></script>
-		<script src="../../public/jquery/js/jquery.validate.min.js"></script>
-		<script src="../../public/jquery/js/jquery.validate.messages_cn.js"></script>
-		<script src="../../public/fakeLoader/js/fakeLoader.js"></script>
-		<script src="../../public/bootstrap/js/bootstrap.js"></script>
-		<script src="../../public/bootstrap/js/bootstrap-table.js"></script>
-		<script src="../../public/bootstrap/js/bootstrap-table-zh-CN.js"></script>
-		<script src="../../public/layer/js/layer.js"></script>
-		<script src="../../public/js/custom.validate.js"></script>
-		<script src="../../public/js/common.js"></script>
-		<script src="../../js/surveillanceCenter/serverMonitoring.js"></script>
+		<script src="../../../public/jquery/js/jquery-1.11.1.min.js"></script>
+		<script src="../../../public/jquery/js/jquery-ui.js"></script>
+		<script src="../../../public/jquery/js/jquery.validate.min.js"></script>
+		<script src="../../../public/jquery/js/jquery.validate.messages_cn.js"></script>
+		<script src="../../../public/fakeLoader/js/fakeLoader.js"></script>
+		<script src="../../../public/bootstrap/js/bootstrap.js"></script>
+		<script src="../../../public/bootstrap/js/bootstrap-table.js"></script>
+		<script src="../../../public/bootstrap/js/bootstrap-table-zh-CN.js"></script>
+		<script src="../../../public/layer/js/layer.js"></script>
+		<script src="../../../public/js/custom.validate.js"></script>
+		<script src="../../../public/js/common.js"></script>
+		<script src="../../../js/surveillanceCenter/serverManage/serverStatus.js"></script>
 	</body>
 
 </html>
